--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+### PhpStorm Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
+
+# End of https://www.gitignore.io/api/phpstorm
+
+vendor
