--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"minimum-stability" : "dev",
 	"prefer-stable" : true,
 	"require" : {
-		"php" : ">=7.1"
+		"php" : ">=7.1",
+		"guzzlehttp/psr7": "^1.3"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~5"
