--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 	"description" : "native PHP view engine",
 	"license" : "MIT",
 	"require" : {
-		"php" : ">=7.1"
+		"php" : ">=7.1",
+		"guzzlehttp/psr7": "^1.3"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~6"
